virtualservices.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: graphql-virtualservice
  namespace: ecommerce
spec:
  hosts:
    - "*"
  gateways:
    - ecommerce-gateway
  http:
    - match:
        - uri:
            prefix: /v1/graphql
        - uri:
            prefix: /playground
      route:
        - destination:
            host: graphql-service
            port:
              number: 3002
      retries:
        attempts: 3
        perTryTimeout: 2s
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: orders-virtualservice
  namespace: ecommerce
spec:
  hosts:
    - "*"
  gateways:
    - ecommerce-gateway
  http:
    - match:
        - uri:
            prefix: /v1/orders
      route:
        - destination:
            host: orders-service
            port:
              number: 3003
      retries:
        attempts: 3
        perTryTimeout: 2s
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: products-virtualservice
  namespace: ecommerce
spec:
  hosts:
    - "*"
  gateways:
    - ecommerce-gateway
  http:
    - match:
        - uri:
            prefix: /v1/products
      route:
        - destination:
            host: products-service
            port:
              number: 3004
      retries:
        attempts: 3
        perTryTimeout: 2s
